# Ideathon

./: POC_speech  README.md  docker-compose.yml  main.py  presentation.md  pyproject.toml
backend/: .env  config.py  main.py  requirements.txt
backend/models/: distress_event.py  user.py
backend/routes/: alerts.py  distress.py  location.py  profile.py  stt.py
backend/services/: llm_service.py  milvus_service.py  mongodb_service.py  notifier_service.py  stt_service.py
backend/utils/: audio_utils.py  location_utils.py  text_utils.py
streamlit_ui/: app.py
streamlit_ui/components/: alert_table.py  audio_recorder.py
streamlit_ui/pages/: 1_Home.py  2_Live_Alert_Monitor.py  3_User_Profiles.py
