[project]
name = "guardian-angel-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.34",
  "streamlit-webrtc>=0.47",
  "aiortc>=1.7.0",
  "numpy>=1.26",
  "requests>=2.31",
  "pandas>=2.2",
  "streamlit-geolocation>=0.0.8",
  "av>=11.0",
  "streamlit-mic-recorder>=0.0.1",
  "faster-whisper>=1.0.0",
]
